Update About section

--- a/src/_includes/about.njk
+++ b/src/_includes/about.njk
@@ -12,7 +12,7 @@
                 alt="">
             <div class="carousel-caption">
                 <h1>Jen Patchett</h1>
-                <h2>Web Developer</h2>
+                <h2>Web Developer & Tester</h2>
             </div>
         </div>
         <div class="carousel-item">
@@ -20,7 +20,7 @@
                 alt="">
             <div class="carousel-caption">
                 <h1>Jen Patchett</h1>
-                <h2>Web Developer</h2>
+                <h2>Web Developer & Tester</h2>
             </div>
         </div>
     </div>
@@ -49,6 +49,7 @@
         <h2>Hello, I'm Jen</h2>
         <p>I’m a full-stack web developer and former software automation tester with a keen interest in APIs and a passion for creating accessible, user-friendly products. I’m a visual and hands-on learner with a demonstrable commitment to continuing personal and professional development. I enjoy pair programming, collaborating in a small team and mentoring others. I'm a freelance web developer, following a tech career break where I retrained as a primary school teacher in 2022, and currently refreshing my coding skills through the 'Bootcamp in Web Design and Development' evening course with <a href="https://thecodersguild.org.uk/course-directory/get-hired-as-a-software-developer/" target="_blank">The Coder's Guild</a>. I also work part-time as a primary tutor and piano teacher.</p>
         <p>I returned to tech and became a freelance web developer in 2023 when I built my own website for my tutoring business, and a family member asked me to enhance their company website. I now design and build custom websites from scratch, in addition to maintaining existing web and e-commerce sites hosted on Wix and WordPress. Take a look at the <a href="/#projects">Projects</a> section to see some of my recent work.</p>
+        <p>I'm now looking for new opportunities in tech and open to software development and testing roles. I have a broad range of skills as both developer and tester, and enjoy the unique challenges each role brings.</p>
     </div>
 
 </section>
