--- a/src/styles.css
+++ b/src/styles.css
@@ -438,3 +438,16 @@ footer p {
 		font-weight: 500;
 	}
 }
+
+
+
+
+
+.cards-wrapper {
+	display: flex;
+}
+
+.card {
+	margin: 0 .5em;
+	width: calc(100%/3);
+}
